Added session functionality and post creation and deletion of posts

--- a/views/fail.ejs
+++ b/views/fail.ejs
@@ -1,11 +1,7 @@
 <%- include("partials/header"); -%>
-<h1>Hello</h1>
-
+<h1>You either entered an invalid email or password. Please try again :)</h1>
 <div class="home">
     <a href="/login">Login</a> <a href="/register">Register</a>
-</div>
-<div class="posts">
-
 </div>
 
 
