--- a/public/styles.css
+++ b/public/styles.css
@@ -4,24 +4,36 @@
   box-sizing: border-box;
 }
 
-form {
-  margin: 30vh auto;
-  height: 500px;
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  border: 1px solid rgb(92, 92, 92, 0.4);
-  border-radius: 10px;
-}
-
 form input {
   margin: 3% auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 500px;
+  margin: 5% auto;
+  justify-content: center;
+  border: 1px solid rgb(112, 112, 112, 0.5);
+  border-radius: 10px;
+  text-align: center;
+}
+
+.delete {
+  border: none;
+  height: 30px;
+  width: 30px;
 }
 
 form button {
   width: 150px;
   height: 30px;
   margin: 2% auto;
+}
+
+.home {
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
 }
