--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header"); -%>
 
 <form action="/login" method="POST">
+    <h2>Login here</h2>
     <label for="email">Email
         <input type="email" name="username" placeholder="email@placeholder.com" required/>
     </label>
