--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,7 @@
 <%- include("partials/header"); -%>
 
 <form action="/register" method="POST">
-    <label>First Name: 
-        <input type="text" name="firstName" placeholder="First Name" required/>
-    </label>
-    <label>Last Name: 
-        <input type="text" name="lastName" placeholder="Last Name"required/>
-    </label>
+   <h2>Register here</h2>
     <label for="email">E mail
         <input type="text" name="username" placeholder="email@placeholder.com" required/>
     </label>
@@ -14,7 +9,7 @@
         <input type="text" name="password" placeholder="password" required/>
     </label>
     <label for="password">Confirm Password
-        <input type="text" name="re-type-password" placeholder="password" required/>
+        <input type="text" name="retype_password" placeholder="password" required/>
     </label>
     <button type="submit">Register</button>
     <p>Already a member? <a href="/login">Login</a></p>
