--- a/views/twitterHome.ejs
+++ b/views/twitterHome.ejs
@@ -1,8 +1,9 @@
 <%- include("partials/header"); -%>
 
-<h1>Hello <%-name.username%></h1>
+<h1>Welcome <%-name.username%></h1>
 <a href="/tweet">Tweet something</a><br />
 <a href="/logout">logout</a>
+<a href="/directmessage">Message Privately</a>
 <div>
     <% posts.forEach(function(post){ %>
         <hr>
